test/src/e2e_vm_tests/test_programs/should_fail/arith_overflow/u32_add_const_eval_overflow/src/main.sw
script;

use core::codec::*;

const RESULT: u32 = u32::max() + 1;

fn main() -> bool {
    log(RESULT);

    true
}
